--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "firebase": "^7.15.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
-    "react-scripts": "3.4.1"
+    "react-scripts": "3.4.1",
+    "react-strap-table": "^1.0.5"
   },
   "scripts": {
     "start": "react-scripts start",
