--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "@material-ui/core": "^4.10.1",
+    "@react-firebase/database": "^0.3.11",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
@@ -11,6 +12,7 @@
     "firebase": "^7.15.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-object-list": "^0.2.9",
     "react-scripts": "3.4.1",
     "react-strap-table": "^1.0.5"
   },
